--- a/NorthWnd/Views/Products/Index.cshtml
+++ b/NorthWnd/Views/Products/Index.cshtml
@@ -8,12 +8,20 @@
 <div class="row">
     <div class="col-lg-6">
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myCreateModal">
+        <button type="button" class="btn btn-primary btn-default" data-toggle="modal" data-target="#myCreateModal">
             新增
         </button>
 
     </div>
-    <div class="col-lg-6"></div>
+    <div class="col-lg-6">
+        <form class="form-inline">
+            <div class="form-group">
+                <label for="exampleInputName2">ProductName</label>
+                <input type="text" class="form-control" id="SearchProductName">
+            </div>
+            <button type="submit" class="btn btn-default" id="btnSearch">Send invitation</button>
+        </form>
+    </div>
 </div>
 
 <div class="row">
@@ -202,7 +210,7 @@
     <script>
         $(function() {
             $("#myTable").DataTable({
-                searching: true,
+                searching: false,
                 ordering: false,
                 "processing": true,
                 "serverSide": true,
@@ -234,7 +242,7 @@
                 "ajax": function(data, callback, settings) {
                     ajaxSend(null,
                         '@Url.Action("GetProductList")',
-                        { pageSize: data.length, pageIndex: (data.start / data.length) + 1 },
+                        { pageSize: data.length, pageIndex: (data.start / data.length) + 1,ProductName:$("#SearchProductName").val() },
                         null,
                         null,
                         function(result) {
@@ -355,6 +363,13 @@
             $("#ReorderLevel").val('');
             $("#Discontinued").val('');
         }
+
+
+        $("#btnSearch").on("click",
+            function (e) {
+                e.preventDefault();
+                $("#myTable").DataTable().ajax.reload(null, false);
+            });
     </script>
 
 }
